# cpp-msgpack-light

./: .clang-tidy  .clang-tidy-checker  .gitlab-ci.yml  .gitmessage  .pre-commit-config.yaml  CMakeLists.txt  README.md  cspell.json  iwyu_mappings.imp  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json  setup.bash
cmake/: cpp-msgpack-light-config.cmake.in
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in  namespaces.h
doc/sphinx/: CMakeLists.txt  start_auto_build.sh.in
doc/sphinx/src/: conf.py  convention.rst  how_to_build_in_repository.md  index.rst  installation.md
doc/sphinx/src/basic_api/: index.rst  objects.rst  serialization.rst  type_support.rst  utility.rst
doc/sphinx/src/change_log/: index.rst  v0.1.0.md  v0.2.0.md  v0.3.0.md
doc/sphinx/src/design/: index.rst
doc/sphinx/src/design/uml/: serializer.puml
include/msgpack_light/: binary.h  file_output_stream.h  memory_output_stream.h  monotonic_allocator.h  object.h  object_data_type.h  output_stream.h  serialization_buffer.h  serialization_buffer_fwd.h  serialize.h  serializer_traits_fwd.h  standard_allocator.h  version.h
include/msgpack_light/details/: allocator_wrapper.h  array_iterator.h  array_iterator_impl.h  array_ref.h  array_ref_impl.h  basic_binary_buffer.h  buffered_serialization_buffer_impl.h  concatenate_macro.h  count_arguments_macro.h  count_arguments_macro.h.jinja  extension_ref.h  invoke_macro.h  map_iterator.h  map_iterator_impl.h  map_ref.h  map_ref_impl.h  mutable_static_binary_view.h  non_buffered_serialization_buffer_impl.h  object_base.h  object_data.h  object_helper.h  object_ref.h  object_ref_decl.h  pack_in_big_endian.h  serialization_buffer.h  serialization_buffer_impl.h  static_memory_buffer_size.h  to_big_endian.h  total_size_of.h
include/msgpack_light/type_support/: array.h  bool.h  chrono.h  common.h  deque.h  float.h  forward_list.h  fwd.h  integer.h  list.h  map.h  nullptr.h  optional.h  pair.h  scalars.h  set.h  string.h  struct.h  timespec.h  tuple.h  unordered_map.h  unordered_set.h  vector.h
include/msgpack_light/type_support/details/: general_array_container_traits.h  general_binary_container_traits.h  general_map_container_traits.h  struct_impl.h  struct_impl.h.jinja
scripts/: check_iwyu.py  ci_win.cmd  collect_llvm_coverage.sh  render_cpp_templates.py  update_source_list.py
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  serialize_arrays_test.cpp  serialize_binaries_test.cpp  serialize_booleans_test.cpp  serialize_floating_point_numbers_test.cpp  serialize_integers_test.cpp  serialize_maps_test.cpp  serialize_strings_test.cpp  source_list.cmake  to_big_endian_test.cpp  unity_source.cpp
tests/include/: example_struct.h.jinja  example_struct_general.h
tests/include/msgpack_light_test/: binary.h
tests/integ/: CMakeLists.txt  serialize_booleans_test.cpp  serialize_chrono_time_point_test.cpp  serialize_ext_test.cpp  serialize_floating_point_numbers_test.cpp  serialize_integers_test.cpp  serialize_maps_test.cpp  serialize_optional_values_test.cpp  serialize_strings_test.cpp  serialize_struct_general_test.cpp  serialize_struct_test.cpp  serialize_struct_test.cpp.jinja  serialize_timespec_test.cpp  serialize_to_file_test.cpp  serialize_unordered_map_test.cpp  serialize_unordered_set_test.cpp  serialize_vectors_test.cpp  source_list.cmake  unity_source.cpp
tests/units/: CMakeLists.txt  binary_test.cpp  dummy_test.cpp  memory_output_stream_test.cpp  monotonic_allocator_test.cpp  object_test.cpp  serialization_buffer_test.cpp  serialize_test.cpp  source_list.cmake  unity_source.cpp
tests/units/details/: basic_binary_buffer_test.cpp  buffered_serialization_buffer_impl_test.cpp  count_arguments_macro_test.cpp  count_arguments_macro_test.cpp.jinja  non_buffered_serialization_buffer_impl_test.cpp  object_data_test.cpp  serialization_buffer_test.cpp  to_big_endian_test.cpp  total_size_of_test.cpp
tests/units/type_support/: array_test.cpp  bool_test.cpp  deque_test.cpp  example_struct.h  example_struct.h.jinja  float_test.cpp  forward_list_test.cpp  integer_test.cpp  list_test.cpp  map_test.cpp  nullptr_test.cpp  optional_test.cpp  pair_test.cpp  scalars_test.cpp  set_test.cpp  string_test.cpp  struct_test.cpp  struct_test.cpp.jinja  timespec_test.cpp  tuple_test.cpp  unordered_map_test.cpp  unordered_set_test.cpp  vector_test.cpp
