[tool.poetry]
name = "cpp-msgpack-light"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.3.7"
sphinx-orange-book-theme = "^0.9.0"
sphinxcontrib-plantuml = "^0.29"
myst-parser = "^3.0.1"
breathe = "^4.35.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
click = "^8.1.7"
cmakelang = "^0.6.13"
doc8 = "^1.1.1"
pre-commit = "^3.7.1"
sphinx-autobuild = "^2024.4.16"
clang-tidy-checker = "^0.5.0"
lcov_cobertura = "^2.0.2"
commitizen = "^3.26.0"
tqdm = "^4.66.4"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long"
