[tool.poetry]
name = "cpp-msgpack-light"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Required for some tools.
setuptools = ">=75"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.1.3"
sphinx-orange-book-theme = "^0.14.0"
sphinxcontrib-plantuml = "^0.30"
myst-parser = "^4.0.0"
breathe = "^4.35.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
click = "^8.1.8"
cmakelang = "^0.6.13"
doc8 = "^1.1.2"
pre-commit = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
clang-tidy-checker = "^0.5.0"
lcov_cobertura = "^2.0.2"
commitizen = "^4.1.0"
tqdm = "^4.67.1"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long"
