[tool.poetry]
name = "cpp-msgpack-light"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Required for some tools.
setuptools = "^80.9.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.3"
sphinx-orange-book-theme = "^0.15.0"
sphinxcontrib-plantuml = "^0.30"
myst-parser = "^4.0.1"
breathe = "^4.36.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
click = "^8.2.1"
cmakelang = "^0.6.13"
doc8 = "^2.0.0"
pre-commit = "^4.2.0"
sphinx-autobuild = "^2024.10.3"
clang-tidy-checker = "^0.6.0"
lcov_cobertura = "^2.1.1"
commitizen = "^4.8.3"
tqdm = "^4.67.1"
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long"
